# HT_proto

./: .gitignore  CMakeLists.txt  README.md  flake.nix  test.py
.github/workflows/: doc.yaml  gen.yaml  test.yaml  test_proto_gen.yaml
proto/: base_msgs.proto  dv_msgs.proto  hytech_msgs.options  hytech_msgs.proto  sim_msgs.proto
simulink_gen/: output_gen.py  proto_message.mako  simulink_msgs.proto  test.json
